# realsense_aruco_paper_pose

./: usd_matrices.txt
realsense_paper_tracker/: package.xml  setup.cfg  setup.py
realsense_paper_tracker/launch/: paper_pose.launch.py
realsense_paper_tracker/realsense_paper_tracker/: aruco_detect.py  paper_pose.py
