<?xml version="1.0"?>
<package format="3">
  <name>realsense_paper_tracker</name>
  <version>0.0.1</version>
  <description>RealSense paper pose tracking using ArUco markers</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
